// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseCard component snapshot: collapsed 1`] = `
<div
  className="mb-4.5 course-card"
  data-testid="CourseCard"
  id="test-card-id"
>
  <FullCourseCard
    cardId="test-card-id"
    isCollapsed={true}
    orientation="vertical"
  />
</div>
`;

exports[`CourseCard component snapshot: not collapsed 1`] = `
<div
  className="mb-4.5 course-card"
  data-testid="CourseCard"
  id="test-card-id"
>
  <FullCourseCard
    cardId="test-card-id"
    isCollapsed={false}
    orientation="horizontal"
  />
</div>
`;
